Se comienza con formularios de captura

--- a/common/css/estilos.elementos.css
+++ b/common/css/estilos.elementos.css
@@ -50,7 +50,7 @@ input:focus, textarea:focus, select:focus{
     font-weight: bold;
     vertical-align: middle;
     cursor: pointer;
-    color: #008080;
+    color: #36b0c8;
     margin: 0 1px;
     
 }
