Se agregan ejempos

--- a/common/js/jqueryui-editable-1.5.1/jqueryui-editable/css/bootstrap-editable.css
+++ b/common/js/jqueryui-editable-1.5.1/jqueryui-editable/css/bootstrap-editable.css
@@ -661,3 +661,13 @@ a.editable-click.editable-disabled:hover {
   margin-left: -5px;
   margin-right: -5px;
 }
+
+.editable-form {
+    display: block;
+    margin-bottom: 5px;  
+}
+
+.editable-form span {
+    width: 70px;  
+    display: inline-block;
+}
