--- a/common/js/jqueryui-editable-1.5.1/jqueryui-editable/css/jqueryui-editable.css
+++ b/common/js/jqueryui-editable-1.5.1/jqueryui-editable/css/jqueryui-editable.css
@@ -211,3 +211,17 @@ a.editable-click.editable-disabled:hover {
     display:inline-block;
 }
 
+.editable-container{
+  width: 100%;
+}
+.editable-form {
+    display: block;
+    margin-bottom: 5px;  
+}
+
+.editable-form span {
+    width: 120px;  
+    display: inline-block;
+    text-align: right;
+    padding-right: 10px;
+}
